Empty <input type=file> controls don't show up in the urlencoded and text/plain enctypes https://bugs.webkit.org/show_bug.cgi?id=221549

Patch by Andreu Botella <andreu@andreubotella.com> on 2021-11-15
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/forms/form-submission-0/form-data-set-empty-file.window-expected.txt:

Source/WebCore:

In the HTML spec, and in Firefox and Chrome's implementations, an empty <input type="file">
control is represented in form submission as if it were an empty file with an empty
filename. WebKit, however, does not include a form entry corresponding to the file input at
all in the application/x-www-form-urlencoded and text/plain enctypes. This change fixes it.

Tests: imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-data-set-empty-file.window.html

* html/FileInputType.cpp:
(WebCore::FileInputType::appendFormData const):


Canonical link: https://commits.webkit.org/244252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285808 268f45cc-cd09-0410-ab3c-d52691b4dbfc